docs: fix qucik-start shell

--- a/src/docs/guides/doc/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/doc/getting-started/quickstart.en-US.mdx
@@ -28,18 +28,20 @@ If you prefer to start with a local development environment, you can use the fol
     Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
 
     ```shell
-    pnpm dlx degit dream-num/univer-doc-start-kit
+    pnpm dlx degit dream-num/univer-doc-start-kit univer-doc-start-kit
     cd univer-doc-start-kit
-    pnpm install && pnpm dev
+    pnpm install
+    pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
 
     ```shell
-    npx degit dream-num/univer-doc-start-kit
+    npx degit dream-num/univer-doc-start-kit univer-doc-start-kit
     cd univer-doc-start-kit
-    npm install && npm run dev
+    npm install
+    npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
