--- a/src/docs/guides/doc/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/doc/getting-started/quickstart.zh-CN.mdx
@@ -28,18 +28,20 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
     执行以下命令需要设备安装有 `nodejs >= 18`, `pnpm >= 7` 和 `git`。
 
     ```shell
-    pnpm dlx degit dream-num/univer-doc-start-kit
+    pnpm dlx degit dream-num/univer-doc-start-kit univer-doc-start-kit
     cd univer-doc-start-kit
-    pnpm install && pnpm dev
+    pnpm install
+    pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     执行以下命令需要设备安装有 `nodejs >= 18`, `npm >= 8` 和 `git`。
 
     ```shell
-    npx degit dream-num/univer-doc-start-kit
-    cd univer-doc-start-kit 
-    npm install && npm run dev
+    npx degit dream-num/univer-doc-start-kit univer-doc-start-kit
+    cd univer-doc-start-kit
+    npm install
+    npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
