--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -28,18 +28,20 @@ If you prefer to start with a local development environment, you can use the fol
     Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
 
     ```shell
-    pnpm dlx degit dream-num/univer-sheet-start-kit
+    pnpm dlx degit dream-num/univer-sheet-start-kit univer-sheet-start-kit
     cd univer-sheet-start-kit
-    pnpm install && pnpm dev
+    pnpm install
+    pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
 
     ```shell
-    npx degit dream-num/univer-sheet-start-kit
+    npx degit dream-num/univer-sheet-start-kit univer-sheet-start-kit
     cd univer-sheet-start-kit
-    npm install && npm run dev
+    npm install
+    npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
@@ -68,9 +70,10 @@ Of course, you may want more than just the basics. If you're looking to add feat
       Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
 
       ```shell
-      pnpm dlx degit dream-num/univer-pro-sheet-start-kit
+      pnpm dlx degit dream-num/univer-pro-sheet-start-kit univer-pro-sheet-start-kit
       cd univer-pro-sheet-start-kit
-      pnpm install && pnpm dev
+      pnpm install
+      pnpm dev
       ```
       <Callout emoji="⚠️">
         If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
@@ -85,9 +88,10 @@ Of course, you may want more than just the basics. If you're looking to add feat
       Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
 
       ```shell
-      npx degit dream-num/univer-pro-sheet-start-kit
+      npx degit dream-num/univer-pro-sheet-start-kit univer-pro-sheet-start-kit
       cd univer-pro-sheet-start-kit
-      npm install && npm run dev
+      npm install
+      npm run dev
       ```
       <Callout emoji="⚠️">
         If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
