--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -29,18 +29,20 @@ import { Callout } from 'nextra/components'
     执行以下命令需要设备安装有 `nodejs >= 18`, `pnpm >= 7` 和 `git`。
 
     ```shell
-    pnpm dlx degit dream-num/univer-sheet-start-kit
+    pnpm dlx degit dream-num/univer-sheet-start-kit univer-sheet-start-kit
     cd univer-sheet-start-kit
-    pnpm install && pnpm dev
+    pnpm install
+    pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     执行以下命令需要设备安装有 `nodejs >= 18`, `npm >= 8` 和 `git`。
 
     ```shell
-    npx degit dream-num/univer-sheet-start-kit
+    npx degit dream-num/univer-sheet-start-kit univer-sheet-start-kit
     cd univer-sheet-start-kit
-    npm install && npm run dev
+    npm install
+    npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
@@ -69,9 +71,10 @@ import { Callout } from 'nextra/components'
       执行以下命令需要设备安装有 `nodejs >= 18`, `pnpm >= 7` 和 `git`。
 
       ```shell
-      pnpm dlx degit dream-num/univer-pro-sheet-start-kit
+      pnpm dlx degit dream-num/univer-pro-sheet-start-kit univer-pro-sheet-start-kit
       cd univer-pro-sheet-start-kit
-      pnpm install && pnpm dev
+      pnpm install
+      pnpm dev
       ```
       <Callout emoji="⚠️">
         如果服务端部署在其他机器上，需要在 `vite.config.ts` 中把 `server` 配置里的 `localhost` 改为该机器的 IP 地址。
@@ -85,9 +88,10 @@ import { Callout } from 'nextra/components'
       执行以下命令需要设备安装有 `nodejs >= 18`, `npm >= 8` 和 `git`。
 
       ```shell
-      npx degit dream-num/univer-pro-sheet-start-kit
+      npx degit dream-num/univer-pro-sheet-start-kit univer-pro-sheet-start-kit
       cd univer-pro-sheet-start-kit
-      npm install && npm run dev
+      npm install
+      npm run dev
       ```
       <Callout emoji="⚠️">
         如果服务端部署在其他机器上，需要在 `vite.config.ts` 中把 `server` 配置里的 `localhost` 改为该机器的 IP 地址。
