--- a/src/docs/guides/sheet/getting-started/workbook-data.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/workbook-data.zh-CN.mdx
@@ -36,6 +36,11 @@ const workbookData: IWorkbookData = {
 };
 ```
 
+### 使用
+IWorkbookData 是 univer-sheet 存储数据的对象。主要用于
+1. [使用 IWorkbookData 创建 univer-Sheet](/guides/sheet/facade/sheet-api#创建工作表)
+2. [从 univer-Sheet 中保存 IWorkbookData](/guides/sheet/facade/sheet-api#获取工作表数据)
+
 ## [IWorksheetData](/typedoc/@univerjs/core/interfaces/IWorksheetData)
 
 `IWorksheetData` 表示 Univer Sheet 中工作表的快照。
@@ -93,3 +98,102 @@ const worksheetData: IWorksheetData = {
 ```
 
 这个结构提供了工作表数据的全面表示，包括布局、内容和显示设置。
+
+## 完整示例
+```typescript
+const workbook: IWorkbookData = {
+  "id": "gyI0JO",
+  "sheetOrder": [
+      "RSfWjJFv4opmE1JaiRj80"
+  ],
+  "name": "",
+  "appVersion": "0.1.11",
+  "locale": "zhCN",
+  "styles": {},
+  "sheets": {
+      "RSfWjJFv4opmE1JaiRj80": {
+          "id": "RSfWjJFv4opmE1JaiRj80",
+          "name": "测试",
+          "tabColor": "",
+          "hidden": 0,
+          "rowCount": 30,
+          "columnCount": 10,
+          "zoomRatio": 1,
+          "freeze": {
+              "startRow": -1,
+              "startColumn": -1,
+              "ySplit": 0,
+              "xSplit": 0
+          },
+          "scrollTop": 0,
+          "scrollLeft": 0,
+          "defaultColumnWidth": 73,
+          "defaultRowHeight": 23,
+          "mergeData": [],
+          "cellData": {},
+          "rowData": {},
+          "columnData": {
+              "0": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "1": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "2": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "3": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "4": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "5": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "6": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "7": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "8": {
+                  "w": 125,
+                  "hd": 0
+              },
+              "9": {
+                  "w": 125,
+                  "hd": 0
+              }
+          },
+          "showGridlines": 1,
+          "rowHeader": {
+              "width": 46,
+              "hidden": 0
+          },
+          "columnHeader": {
+              "height": 20,
+              "hidden": 0
+          },
+          "selections": [
+              "A1"
+          ],
+          "rightToLeft": 0
+      }
+  },
+  "resources": [
+      {
+          "name": "SHEET_DEFINED_NAME_PLUGIN",
+          "data": ""
+      }
+  ]
+}
+```
