--- a/src/docs/guides/sheet/facade/dom.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/dom.zh-CN.mdx
@@ -1,4 +1,7 @@
+import { Callout } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import ReactLive from '@/components/ReactLive'
+import ServerNotice from '@/components/ServerNotice'
 import VersionBadge from '@/components/VersionBadge'
 
 # 在Univer中使用自定义组件
