--- a/src/docs/guides/sheet/facade/range-selection.en-US.mdx
+++ b/src/docs/guides/sheet/facade/range-selection.en-US.mdx
@@ -1,3 +1,11 @@
+import { Callout } from 'nextra/components'
+import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import ReactLive from '@/components/ReactLive'
+import ServerNotice from '@/components/ServerNotice'
+import VersionBadge from '@/components/VersionBadge'
+
+# Range & Selection & Cell
+
 ## Range
 
 A range refers to a rectangular area in a worksheet, determined by the starting row number, starting column number, length and width, or ending row number and ending column number.
