--- a/src/docs/guides/sheet/facade/range-selection.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/range-selection.zh-CN.mdx
@@ -1,3 +1,10 @@
+import { Callout } from 'nextra/components'
+import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import ReactLive from '@/components/ReactLive'
+import ServerNotice from '@/components/ServerNotice'
+import VersionBadge from '@/components/VersionBadge'
+
+# 范围 & 选区 & 单元格
 
 ## 范围Range
 
