--- a/src/docs/guides/sheet/facade/dom.en-US.mdx
+++ b/src/docs/guides/sheet/facade/dom.en-US.mdx
@@ -1,4 +1,7 @@
+import { Callout } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import ReactLive from '@/components/ReactLive'
+import ServerNotice from '@/components/ServerNotice'
 import VersionBadge from '@/components/VersionBadge'
 
 # Using Custom Components in Univer
