--- a/src/docs/guides/sheet/facade/row-col.en-US.mdx
+++ b/src/docs/guides/sheet/facade/row-col.en-US.mdx
@@ -1,3 +1,10 @@
+import { Callout } from 'nextra/components'
+import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import ReactLive from '@/components/ReactLive'
+import ServerNotice from '@/components/ServerNotice'
+import VersionBadge from '@/components/VersionBadge'
+
+# Row & Column
 ## Row
 
 ### Insert row after given position
