--- a/src/docs/guides/sheet/facade/row-col.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/row-col.zh-CN.mdx
@@ -1,3 +1,11 @@
+import { Callout } from 'nextra/components'
+import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import ReactLive from '@/components/ReactLive'
+import ServerNotice from '@/components/ServerNotice'
+import VersionBadge from '@/components/VersionBadge'
+
+# 行列操作
+
 ## 行 Row
 
 ### 在指定行后插入行
