--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -161,17 +161,23 @@ const sheetId = 'SheetId';
 univerAPI.executeCommand(SetWorksheetActiveOperation.id, { unitId: workbookId, subUnitId: sheetId });
 ```
 
-## [Row and Column](/guides/sheet/features/core/row-column)
+## Core Features
 
-## [Range](/guides/sheet/features/core/range-selection#range)
+### [Permission](/guides/sheet/features/core/permission)
 
-## [Selection](/guides/sheet/features/core/range-selection#selection)
+### [Formula](/guides/sheet/features/core/formula)
 
-## [Cell](/guides/sheet/features/core/range-selection#selection)
+### [Row and Column](/guides/sheet/features/core/row-column)
 
-## [Freeze](/guides/sheet/facade/freeze)
+### [Range](/guides/sheet/features/core/range-selection#range)
 
-## [Integrating Custom Components into Univer](/guides/sheet/facade/dom)
+### [Selection](/guides/sheet/features/core/range-selection#selection)
+
+### [Cell](/guides/sheet/features/core/range-selection#selection)
+
+### [Freeze](/guides/sheet/facade/freeze)
+
+### [Integrating Custom Components into Univer](/guides/sheet/facade/dom)
 
 ## Server-Related Features
 
