--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -163,17 +163,23 @@ const sheetId = 'SheetId';
 univerAPI.executeCommand(SetWorksheetActiveOperation.id, { unitId: workbookId, subUnitId: sheetId });
 ```
 
-## [行列操作](/guides/sheet/features/core/row-column)
+## 核心功能
 
-## [范围Range](/guides/sheet/features/core/range-selection#范围Range)
+### [权限控制](/guides/sheet/features/core/permission)
 
-## [选区Selection](/guides/sheet/features/core/range-selection#选区Selection)
+### [公式](/guides/sheet/features/core/formula)
 
-## [单元格Cell](/guides/sheet/features/core/range-selection#单元格Cell)
+### [行列操作](/guides/sheet/features/core/row-column)
 
-## [冻结](/guides/sheet/facade/freeze)
+### [范围Range](/guides/sheet/features/core/range-selection#范围range)
 
-## [集成自定义组件](/guides/sheet/facade/dom)
+### [选区Selection](/guides/sheet/features/core/range-selection#选区selection)
+
+### [单元格Cell](/guides/sheet/features/core/range-selection#单元格cell)
+
+### [冻结](/guides/sheet/facade/freeze)
+
+### [集成自定义组件](/guides/sheet/facade/dom)
 
 ## 与服务端交互的功能
 
