--- a/src/pages/guides/sheet/features/core/dom.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/core/dom.zh-CN.mdx
@@ -1,3 +1,3 @@
-import Content from '@/docs/guides/sheet/facade/dom.en-US.mdx'
+import Content from '@/docs/guides/sheet/facade/dom.zh-CN.mdx'
 
 <Content />
