--- a/src/docs/guides/sheet/facade/dom.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/dom.zh-CN.mdx
@@ -47,8 +47,8 @@ dialog.dispose();
 
 ### attachPopup 方法
 
-Popup 是一个cell上面依附的临时dom，一般用于显示一些临时的状态信息，不支持持久化存储。
-使用 `range.attachPopup()` 方法可以将自定义弹出框附加到特定的单元格范围。
+* Popup 是一个cell上面依附的临时dom，一般用于显示一些临时的状态信息，不支持持久化存储。
+* 使用 `range.attachPopup()` 方法可以将自定义弹出框附加到特定的单元格范围。
 
 ```typescript
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
