--- a/src/docs/guides/sheet/facade/dom.en-US.mdx
+++ b/src/docs/guides/sheet/facade/dom.en-US.mdx
@@ -16,6 +16,17 @@ Univer provides multiple ways to integrate custom components, allowing you to ex
 Use the `workbook.openSidebar()` method to open a sidebar containing custom components in the Univer interface.
 
 ```typescript
+import { ComponentManager } from '@univerjs/ui';
+
+const injector = univer.__getInjector();
+const componentManager = injector.get(ComponentManager);
+
+// You should register components at an appropriate time (e.g., when Univer has finished loading)
+componentManager.register({
+  componentKey: 'mySidebar',
+  component: () => <div style={{ width: 100, height: 100, background: '#fff' }}>弹出内容</div>,
+});
+
 const sidebar = workbook.openSidebar({
   id: 'mySidebar',
   title: 'My Sidebar',
@@ -33,6 +44,17 @@ sidebar.dispose();
 Use the `workbook.openDialog()` method to open a dialog containing custom components.
 
 ```typescript
+import { ComponentManager } from '@univerjs/ui';
+
+const injector = univer.__getInjector();
+const componentManager = injector.get(ComponentManager);
+
+// You should register components at an appropriate time (e.g., when Univer has finished loading)
+componentManager.register({
+  componentKey: 'myDialog',
+  component: () => <div style={{ width: 100, height: 100, background: '#fff' }}>弹出内容</div>,
+});
+
 const dialog = workbook.openDialog({
   id: 'myDialog',
   title: 'My Dialog',
@@ -49,18 +71,29 @@ dialog.dispose();
 
 * A Popup is a temporary DOM element attached to a cell, generally used to display temporary status information. It does not support persistent storage.
 * Use the `range.attachPopup()` method to attach custom popups to specific cell ranges.
+* Popups will stick to the edges of cells, and if they are obstructed, they will automatically adjust their position and direction.
 
 ```typescript
+import { ComponentManager } from '@univerjs/ui';
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 const range = sheet.getRange(0, 0, 10, 10); // A1:J10
 
+const injector = univer.__getInjector();
+const componentManager = injector.get(ComponentManager);
+
+// You should register components at an appropriate time (e.g., when Univer has finished loading)
+componentManager.register({
+  componentKey: 'myPopup',
+  component: () => <div style={{ width: 100, height: 100, background: '#fff' }}>Popup content</div>,
+});
+
+// Attach the popup to the first cell of the range
+// If disposable is null, it means the popup failed to add
 const disposable = range.attachPopup({
-  componentKey: () => (
-    <div style={{ width: 100, height: 100, background: '#fff' }}>
-      Popup content
-    </div>
-  ),
-  // If it's a Vue3 component, set isVue3: true
+  // componentKey must be a component or a key of a registered component
+    componentKey: myPopup,
+    // If componentKey is a Vue3 component, isVue3 must be set to true
+    // isVue3: true,
 });
 
 // Remove the popup
@@ -73,25 +106,44 @@ disposable.dispose();
 
 * The `@univerjs/sheet-drawing-ui` plugin needs to be installed before using this method.
 * Floating DOM is a draggable component hovering over the sheet, which also supports persistent storage.
-* Use the `worksheet.addFloatDomToPosition()` method to add a floating custom DOM element to the worksheet.
+* Call this method after Univer has finished rendering.
+* `componentKey` must be a registered component key or a React/Vue3 component. If it is a Vue3 component, `isVue3` must be set to true.
 
-```typescript
+[demo](https://stackblitz.com/edit/awesome-univer-sheets-vite-demo-fqsu99?file=package.json,src%2Fmain.tsx)
+
+```tsx
+import { ComponentManager } from '@univerjs/ui';
+const worksheet = univerAPI.getActiveWorkbook().getActiveSheet();
+
+// You should register components at an appropriate time (e.g., when Univer has finished loading)
+componentManager.register({
+  componentKey: 'myFloatDom',
+  component: ({ data }) => (
+        <div style={{ width: '100%', height: '100%', background: '#fff' }}>
+            Popup content
+            {data?.label}
+        </div>
+    ),
+});
+
+// Add a floating DOM
+// If disposable is null, it means the floating DOM failed to add
 const disposable = worksheet.addFloatDomToPosition({
-  componentKey: ({ data }) => (
-    <div style={{ width: '100%', height: '100%', background: '#fff' }}>
-      Floating DOM content
-      {data?.label}
-    </div>
-  ),
-  initPosition: {
-    startX: 100,
-    endX: 200,
-    startY: 100,
-    endY: 200,
-  },
-  data: {
-    label: 'Custom Label',
-  },
+    // componentKey must be a component or a key of a registered component
+    componentKey: myFloatDom,
+    // If componentKey is a Vue3 component, isVue3 must be set to true
+    // isVue3: true,
+    initPosition: {
+        startX: 100,
+        endX: 200,
+        startY: 100,
+        endY: 200,
+    },
+
+    // This is the component's data
+    data: {
+        label: 'Hello',
+    },
 });
 
 // Remove the floating DOM
